--- a/.gitattributes
+++ b/.gitattributes
@@ -12,3 +12,7 @@
 *.exe filter=lfs diff=lfs merge=lfs -text
 *.tar filter=lfs diff=lfs merge=lfs -text
 *.tar.gz filter=lfs diff=lfs merge=lfs -text
+
+*.unity binary merge=unityyamlmerge
+*.prefab binary merge=unityyamlmerge
+*.asset binary merge=unityyamlmerge
