--- a/.gitattributes
+++ b/.gitattributes
@@ -13,6 +13,6 @@
 *.tar filter=lfs diff=lfs merge=lfs -text
 *.tar.gz filter=lfs diff=lfs merge=lfs -text
 
-*.unity binary merge=unityyamlmerge
-*.prefab binary merge=unityyamlmerge
-*.asset binary merge=unityyamlmerge
+*.unity merge=unityyamlmerge
+*.prefab merge=unityyamlmerge
+*.asset merge=unityyamlmerge
